--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,16 @@
 #content {
   background-color: #f8f8f8;
-  margin: 50px 0 50px 0;
+  margin: 50px 50px 50px 50px;
 }
 
 .text {
-  border: 10px solid white;
+  border: 1px solid black;
   color: black;
-  margin: 0;
+  margin: 20px 20px 20px 20px;
 }
 
 details {
-  margin: 20px;
+  margin: 20px 20px 20px 20px;
   cursor: pointer;
 }
 
@@ -19,18 +19,19 @@ progress {
   appearance: none;
   width: 250px;
   height: 20px;
-  margin: 20px;
+  margin: 20px 20px 20px 20px;
 }
 
 progress::-webkit-progress-bar {
   background-color: white;
   border-radius: 20px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
 }
 
 progress::-webkit-progress-value {
   background-color: #4389bf;
-  border-radius: 20px;
+  border-radius: 20px 0 0 20px;
   background-size: 35px 20px, 100% 100%, 100% 100%;
 }
 
